# RustChat

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/: root.tsx  types.ts
frontend/src/components/: Chat.tsx  ChatView.css  ChatView.tsx  Message.css  Message.tsx  NicknameInput.tsx
frontend/src/routes/: index.tsx
src/: chat_server.rs  client.rs  main.rs  routes.rs  server.rs
